@@ -84,6 +84,8 @@ CMapDrawItem::CMapDrawItem()
   mSkipHolePos = NULL;
   for (int ind = 0; ind < 3; ind++)
     mXHoleISSpacing[ind] = mYHoleISSpacing[ind] = 0.;
+  mFoundHoleSize = 0.;
+  mFoundHoleSpacing = 0.;
   mTSstartAngle = EXTRA_NO_VALUE;
   mTSendAngle = EXTRA_NO_VALUE;
   mTSbidirAngle = EXTRA_NO_VALUE;
