@@ -840,6 +840,13 @@
       <TD class="style9">Y component of hole vectors converted to image shift</TD>
     </TR>
     <TR VALIGN="top">
+      <TD>HoleSizeSpacing</TD>
+      <TD class="style10">Two Floats</TD>
+      <TD class="style7">0,0</TD>
+      <TD class="style8">mFoundHoleSize, mFoundHoleSpacing</TD>
+      <TD class="style9">Hole diameter and spacing from hole finding, in microns.</TD>
+    </TR>
+    <TR VALIGN="top">
       <TD>TSstartEndAngles</TD>
       <TD class="style10">Two Floats</TD>
       <TD class="style7">-1.e8,-1.e8</TD>
